# bas-veeg-arc

./: .gitignore  BUILD_INSTRUCTIONS.md  BasVeegArc-x86_64.AppImage  Cargo.toml  LICENSE  README.md  bas-veeg-arc-installer.iss  build.rs  build_windows.bat  installer.iss  installer.nsi
BasVeegArc.AppDir/: AppRun  bas-veeg-arc.desktop
releases/: bas-veeg-arc-linux  bas-veeg-arc-linux.old
src/: app.rs  main.rs
src/audio/: mixer.rs  mod.rs  mod.rs:5:9  music.rs  sfx.rs
src/combat/: ai.rs  boss_system.rs  character_movesets.rs  combo_system.rs  combos.rs  hitbox.rs  hurtbox.rs  inputs.rs  integration.rs  meter.rs  mod.rs  plane_system.rs  supers.rs  weapons.rs
src/coop/: input_handler.rs  mod.rs  player_manager.rs  shared_systems.rs  ui_coop.rs
src/data/: characters.rs  game_state.rs  mod.rs  replay.rs  save.rs  shop.rs
src/ecs/: comp.rs  entity.rs  mod.rs  sys.rs  world.rs
src/progression/: account_level.rs  achievements.rs  challenges.rs  character_mastery.rs  mod.rs  skill_tree.rs
src/render/: atlas.rs  camera.rs  character_renderer.rs  enhanced_vfx.rs  graphics_enhancement.rs  map_system.rs  mod.rs  motion_trail.rs  post.rs  screen_effects.rs  shader_system.rs  skeletal_animation.rs  sprite_renderer.rs  texture_manager.rs  vfx.rs
src/states/: boot.rs  character_select.rs  controls.rs  coop_select.rs  cutscene.rs  endless.rs  game_modes.rs  gameplay.rs  menu.rs  mod.rs  results.rs  settings.rs  skill_tree_ui.rs  training.rs  tutorial_system.rs  versus.rs
src/ui/: damage_numbers.rs  hud.rs  menu_ui.rs  mod.rs  pause.rs  subtitles.rs
src/util/: mod.rs  (+3 more)
(+1 files in other folders)
