[package]
name = "bas-veeg-arc"
version = "1.0.0"
edition = "2021"

[dependencies]
macroquad = "0.4"
glam = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
ahash = "0.8"
arrayvec = "0.7"
bitflags = "2.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1