[package]
name = "bas-veeg-arc"
version = "0.4.0"
edition = "2021"

[dependencies]
macroquad = "0.4"
glam = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
ahash = "0.8"
arrayvec = "0.7"
bitflags = "2.4"
minreq = { version = "2.11", features = ["https"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
